Mise à jour du CV + Corrections taille font pour mobile

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                     <img src="./assets/email-mail-svgrepo-com.svg" alt="email icon">
                     <p>Email</p>
                 </a>
-                <a href="./assets/BELLIER-C_CV.pdf" target="_blank">
+                <a href="./assets/BELLIER-Clement_CV-DeveloppeurWebFrontEnd.pdf" target="_blank">
                     <img src="./assets/resume-svgrepo-com.svg" alt="cv icon">
                     <p>CV</p>
                 </a>
