Ajout montagne et MAJ CV

--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="fr">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,44 +8,45 @@
     <link rel="stylesheet" href="stars.css">
     <title>Portfolio de Clément BELLIER</title>
 </head>
+
 <body>
     <main>
         <div class="flex-container">
-                <div class="text">
+            <div class="text">
                 <h1>En Construction</h1>
                 <p>Mon portofolio sera prochainement disponible.</p>
-                </div>
-            </div>        
-            <h2>En attendant, apprenez en plus sur moi</h2>
-            <div class="networks">
-                <a href="https://github.com/ClementBellier" target="_blank">
-                    <img src="./assets/github.svg" alt="github logo">
-                    <p>Github</p>
-                </a>
-                <a href="https://www.linkedin.com/in/clement-bellier-b08309179/" target="_blank">
-                    <img src="./assets/linkedin.svg" alt="linkedIn logo">
-                    <p>LinkedIn</p>
-                </a>
-                <a href="https://codepen.io/clementbellier" target="_blank">
-                    <img src="./assets/codepen.svg" alt="codepen logo">
-                    <p>Codepen</p>
-                </a>
-                <a href="https://twitter.com/BremiumB" target="_blank">
-                    <img src="./assets/twitter.svg" alt="Twitter logo">
-                    <p>Twitter</p>
-                </a>
-                <a href="mailto:clement.bellier@gmail.com">
-                    <img src="./assets/email-mail-svgrepo-com.svg" alt="email icon">
-                    <p>Email</p>
-                </a>
-                <a href="./assets/BELLIER-Clement_CV-DeveloppeurWebFrontEnd.pdf" target="_blank">
-                    <img src="./assets/resume-svgrepo-com.svg" alt="cv icon">
-                    <p>CV</p>
-                </a>
             </div>
         </div>
-    </main>
-    <div class="stars">
+        <h2>En attendant, apprenez en plus sur moi</h2>
+        <div class="networks">
+            <a href="https://github.com/ClementBellier" target="_blank">
+                <img src="./assets/github.svg" alt="github logo">
+                <p>Github</p>
+            </a>
+            <a href="https://www.linkedin.com/in/clement-bellier-b08309179/" target="_blank">
+                <img src="./assets/linkedin.svg" alt="linkedIn logo">
+                <p>LinkedIn</p>
+            </a>
+            <a href="https://codepen.io/clementbellier" target="_blank">
+                <img src="./assets/codepen.svg" alt="codepen logo">
+                <p>Codepen</p>
+            </a>
+            <a href="https://twitter.com/BremiumB" target="_blank">
+                <img src="./assets/twitter.svg" alt="Twitter logo">
+                <p>Twitter</p>
+            </a>
+            <a href="mailto:clement.bellier@gmail.com">
+                <img src="./assets/email-mail-svgrepo-com.svg" alt="email icon">
+                <p>Email</p>
+            </a>
+            <a href="./assets/BELLIER-Clement_CV_DeveloppeurFrontEnd.pdf" target="_blank">
+                <img src="./assets/resume-svgrepo-com.svg" alt="cv icon">
+                <p>CV</p>
+            </a>
+        </div>
+        </div>
+    </main>    
+    <div class="stars" role="img" aria-label="Illustration d'un ciel étoilé, plusieurs étoiles filantes passent de temps en temps">
         <div class="star star-1"></div>
         <div class="star star-2"></div>
         <div class="star star-3"></div>
@@ -355,5 +357,25 @@
         <div class="shooting-star shooting-star-8"></div>
         <div class="shooting-star shooting-star-9"></div>
     </div>
+    <div class="landscape" role="img" aria-label="Illustration de la silhouette d'un paysage montagneux">
+        <div class="landscape__layer">
+            <div class="landscape__image">
+                <svg viewBox="0 0 1058.3333 264.58333">
+                    <use xlink:href="#montain-shape" class="bg-montain" />
+                    <use xlink:href="#montain-stroke" class="bg-stroke" />
+                    <use xlink:href="#montain-stroke" class="fg-stroke" />
+                </svg>
+            </div>
+        </div>
+    </div>
+    <svg>
+        <symbol id="montain-shape" xmlns="http://www.w3.org/2000/svg">
+            <path d="m 839.92821,268.39097 c -8.9952,-4.36911 -16.44834,-5.65416 -26.21456,-7.71026 -24.75823,-5.95395 -43.73374,-0.85665 -61.1672,-20.56036 -7.02478,0.72819 -10.83705,-2.78497 -17.99044,-3.5981 -6.59645,7.88145 -13.06451,13.3214 -23.64451,17.47633 -33.02512,15.89147 -25.57207,25.22941 -43.94791,31.09766 -4.16736,-0.31006 -4.71179,-2.78415 -7.45318,-5.91109 -3.2554,4.28337 -6.51082,9.08092 -12.20768,12.46474 -18.33313,5.86837 -30.241,11.35172 -49.98749,12.33631 -8.82383,2.52717 -17.8921,14.84493 -29.42725,17.34783 -7.62604,1.23116 -16.19375,-6.95853 -19.53243,-3.08406 -14.13296,14.54021 -16.56042,11.24263 -22.23082,12.33632 -2.58644,1.22241 0.64245,3.34111 -4.36924,4.88309 -13.51948,5.6883 -29.73791,6.76693 -45.23295,12.07921 -7.624,2.61371 -10.13875,8.60442 -20.0464,12.85027 -7.95593,3.40946 -22.10257,2.35554 -32.38271,1.0275 -11.35106,-1.84189 -18.84699,-5.61132 -28.2705,-8.8667 -4.06933,-1.2422 -6.03555,14.30392 -29.17019,17.21941 -3.03159,-0.24618 -6.42518,-4.36897 -15.03485,-7.58166 -10.06597,-2.27022 -14.8635,-5.05444 -24.28701,-7.45325 -7.64923,-1.94704 -12.4219,-10.57944 -16.8338,-11.30812 0,0 -19.40055,10.50357 -24.15856,10.28018 -3.54518,0.16992 -6.89557,-3.40766 -10.15171,-3.21266 -5.56921,0.45164 -19.01834,10.28031 -19.01834,10.28031 0,0 -13.1596,4.52637 -18.63293,-0.38579 -4.64905,-5.01239 -6.99928,-11.85949 -12.97879,-16.19142 -5.92968,-2.6045 -9.39439,0.13799 -14.26378,-3.34103 -12.4886,-8.9229 -22.62837,-15.38555 -28.14207,-22.48801 -7.68528,8.44974 -12.55047,9.72345 -18.2474,14.39239 -6.52327,5.34565 -13.57747,-2.33951 -19.40392,4.75464 -10.36838,12.6241 -17.43353,13.15004 -28.78461,23.90138 -13.81064,6.20279 -10.57453,-0.5745 -14.71912,2.21882 -18.507912,12.47441 -23.564892,8.07723 -30.047488,3.502 -2.758779,-1.94713 -1.752475,-3.71874 -6.120432,-1.09504 -19.061262,-4.5404 -24.501235,-12.55033 -39.064869,-12.85029 -6.853468,0.0428 -18.9755595,22.31692 -34.4387101,22.10239 -30.3694619,-13.57848 -43.0055549,-27.02835 -49.8590449,-28.78448 -2.998406,-0.81393 -4.45476,4.28326 -8.224169,4.11199 -10.06606,-3.29822 -11.393904,-7.88142 -19.018419,-10.28017 -30.240978,-7.36745 -45.318608,-21.54526 -51.401048,-22.10246 -5.39714,0 -14.90634,10.92263 -26.21459,13.87822 -7.19612,-1.37061 -15.93434,-13.53559 -26.21453,-16.44834 -8.22418,0.0428 -16.19134,2.65502 -27.75662,3.59806 l 0.18568,65.2495 1056.3824,0.12867 z" transform="translate(217.2468,-121.07074)" />
+        </symbol>
+        <symbol id="montain-stroke" xmlns="http://www.w3.org/2000/svg">
+            <path d="m 840.70129,276.94826 c -9.00869,-4.37566 -16.47301,-5.66263 -26.25389,-7.72181 -24.79535,-5.96288 -43.79933,-0.85795 -61.25892,-20.5912 -7.03533,0.72928 -10.85332,-2.78915 -18.01744,-3.6035 -6.60633,7.89327 -13.0841,13.34138 -23.67994,17.50253 -33.07467,15.91532 -25.61043,25.26726 -44.01384,31.14431 -4.17362,-0.31053 -4.71884,-2.78833 -7.46437,-5.91996 -3.26025,4.2898 -6.52058,9.09454 -12.22597,12.48344 -18.36063,5.87717 -30.28635,11.36874 -50.06245,12.3548 -8.83708,2.53097 -17.91893,14.8672 -29.47138,17.37385 -7.63749,1.23302 -16.21806,-6.96896 -19.56173,-3.08868 -14.15415,14.56202 -16.58528,11.25949 -22.26416,12.35482 -2.59032,1.22424 0.64341,3.34612 -4.37581,4.89042 -13.53974,5.69683 -29.78251,6.77707 -45.30077,12.09732 -7.63542,2.61764 -10.15397,8.61733 -20.07645,12.86955 -7.96787,3.41457 -22.13573,2.35907 -32.4313,1.02904 -11.36806,-1.84465 -18.87524,-5.61974 -28.31288,-8.88001 -4.07543,-1.24405 -6.04462,14.32538 -29.21394,17.24524 -3.03615,-0.24655 -6.43483,-4.37553 -15.05741,-7.59303 -10.08105,-2.27362 -14.88578,-5.06202 -24.32344,-7.46443 -7.66069,-1.94996 -12.44052,-10.59531 -16.85904,-11.32508 0,0 -19.42965,10.51933 -24.19479,10.2956 -3.5505,0.17018 -6.90592,-3.41277 -10.16694,-3.21748 -5.57754,0.45232 -19.04685,10.29573 -19.04685,10.29573 0,0 -13.17934,4.53316 -18.66087,-0.38638 -4.65604,-5.01989 -7.00977,-11.87726 -12.99827,-16.21569 -5.93857,-2.60841 -9.40848,0.1382 -14.28517,-3.34604 -12.5073,-8.93628 -22.6623,-15.40863 -28.18426,-22.52174 -7.69681,8.46241 -12.5693,9.73803 -18.27477,14.41398 -6.53307,5.35366 -13.59784,-2.34303 -19.43301,4.76177 -10.38395,12.64303 -17.45967,13.16976 -28.82779,23.93722 -13.83136,6.2121 -10.5904,-0.57535 -14.74121,2.22215 -18.535658,12.49312 -23.600222,8.08934 -30.092539,3.50726 -2.762917,-1.95006 -1.755106,-3.72432 -6.129613,-1.09669 C 46.35023,370.20837 40.902091,362.18642 26.316612,361.88602 19.452868,361.92892 7.3125967,384.23639 -8.1737461,384.02155 -38.588754,370.4227 -51.243798,356.95266 -58.107566,355.1939 c -3.002902,-0.81515 -4.461441,4.28968 -8.236503,4.11816 -10.081157,-3.30317 -11.41099,-7.89324 -19.046941,-10.2956 -30.28633,-7.37849 -45.38657,-21.57756 -51.47814,-22.1356 -5.40523,0 -14.92869,10.93901 -26.2539,13.89904 -7.20691,-1.37267 -15.95823,-13.55589 -26.25385,-16.47301 -8.23651,0.0429 -16.21562,2.659 -27.79824,3.60345" transform="translate(217.2468,-129)" />
+        </symbol>
+    </svg>
 </body>
+
 </html>
