--- a/index.html
+++ b/index.html
@@ -352,7 +352,62 @@
       </div>
     </div>
     <svg>
-      <symbol id="refresh" xmlns="http://www.w3.org/2000/svg" fill="none" stroke="currentColor" viewBox="0 0 24 24" class="humbleicons hi-refresh"><path xmlns="http://www.w3.org/2000/svg" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M20 20v-5h-5M4 4v5h5m10.938 2A8.001 8.001 0 005.07 8m-1.008 5a8.001 8.001 0 0014.868 3"/></symbol>
+      <symbol
+        id="refresh"
+        xmlns="http://www.w3.org/2000/svg"
+        fill="none"
+        stroke="currentColor"
+        viewBox="0 0 24 24"
+        class="humbleicons hi-refresh"
+      >
+        <path
+          xmlns="http://www.w3.org/2000/svg"
+          stroke="currentColor"
+          stroke-linecap="round"
+          stroke-linejoin="round"
+          stroke-width="2"
+          d="M20 20v-5h-5M4 4v5h5m10.938 2A8.001 8.001 0 005.07 8m-1.008 5a8.001 8.001 0 0014.868 3"
+        />
+      </symbol>
+      <symbol id="external-link" xmlns="http://www.w3.org/2000/svg" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path xmlns="http://www.w3.org/2000/svg" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 6H7a1 1 0 00-1 1v10a1 1 0 001 1h10a1 1 0 001-1v-5m-6 0l7.5-7.5M15 3h6v6"/></symbol>
+      <symbol id="codingames" xmlns="http://www.w3.org/2000/svg" xml:space="preserve" viewBox="0 0 765 165"><path d="M87.479 2.342h569.198v162.727H87.479z" style="fill:#20252a;fill-opacity:1;fill-rule:evenodd;stroke:#000;stroke-width:.86177653px;stroke-linecap:butt;stroke-linejoin:miter;stroke-opacity:1"/><path fill="none" d="M426.9 96.5c-.8 4.5 4 3.9 4 3.9s5.1.2 6.9-6.4c.2-1.1.5-2.6.5-2.6s-3.2.7-6.2.9c-4.6.8-5.2 3.8-5.2 4.2zM214.4 80.4s-4.4-.3-6.7 4.3c-2.8 6.4-1.5 10.5-1.5 10.9.9 3.6 4.9 3.5 4.9 3.5s4.4.3 6.7-4.3c2.8-6.4 1.5-10.5 1.5-10.9-.9-3.7-4.9-3.5-4.9-3.5zM268.5 80.3c-4.2-.1-7.4 5-8.3 9.8-.8 4.9-.1 8.8 5 8.8 3.1 0 6.7-1.8 8.1-8.8.6-3.3 1.1-9.8-4.8-9.8zM566.2 78.2c-5.6 0-6.8 7.3-6.8 7.3h10.8s1.5-7.3-4-7.3z"/><path fill="#FFF" d="M163.8 68s2.9-1.6 6.6-2.2c10.4-1 15.5 3.2 15.5 3.2l2.9-16.8s-14.8-4.5-28.5.3c-4 1.3-16.3 6.2-22.7 22-1.5 3.6-2.5 10.1-2.6 11.8-1.2 19.2 12.3 25.6 25.9 25.7 9.8.1 17.9-2.6 18-2.8l2.8-16s-7.6 3.7-14.3 3.4-9.7-3.3-11.3-5.6c-1.6-2.3-2.2-7.8-.2-13.8 2-5.9 6.9-8.8 7.9-9.2zM216.6 67.4s-24.1-1.2-28.6 22.1c-1.8 9.8 1.3 22.5 20.8 22.5s27-12.7 28.7-22.5c3.6-23.2-20.9-22.1-20.9-22.1zm1.2 27.3c-2.4 4.7-6.7 4.3-6.7 4.3s-4.1.1-4.9-3.5c-.1-.4-1.3-4.5 1.5-10.9 2.4-4.7 6.7-4.3 6.7-4.3s4.1-.1 4.9 3.5c.1.4 1.4 4.5-1.5 10.9zM280 48l-4.3 24.5c-2.1-3.6-5.7-5.6-10.5-5.6-10 0-20.6 9-23.3 24.6-2.2 12.5 3.7 20.6 14.5 20.6 5.9 0 10.3-2.4 13.5-6.2l-.9 5h17.8l10.9-63H280zm-6.7 42.2c-1.4 7-5 8.8-8.1 8.8-5.1-.1-5.9-4-5-8.8.8-4.9 4.1-9.9 8.3-9.8 5.9-.1 5.4 6.4 4.8 9.8zM341.4 68.9s-5.3-3.6-14.3 0c-3.9 1.5-7.7 6.3-7.7 6.3l1.2-6.9h-17.8L297.5 99h17.8l2-11.8.1-.4c.3-1.5 1.6-6.5 6.3-6.5 5.4 0 3.7 6.9 3.7 6.9l-4.1 23.8H341s3.9-22.3 4.9-28c1.8-10.7-4.5-14.1-4.5-14.1z"/><ellipse cx="313.3" cy="54.8" fill="#FFF" rx="8.2" ry="7.2"/><path fill="#FFD200" d="M389.7 65c12.4 0 16.8 3.3 16.8 3.3s2.6-14.8 2.7-15.8c-8.3-2.1-48-9.8-57 30-5.4 31.2 27.5 29.5 27.5 29.5s13 0 24.1-5c.2-1 3.9-22.4 3.9-22.4l-18.2-.1-2.1 12.3s-11.3 3-15.4-5.5c-1.6-3.1-.5-9.2-.5-9.2S373.9 65 389.7 65zM440.3 67.3c-9.8-.5-20.4 3.3-20.4 3.3l-2.1 11.8s7.8-4.3 15.7-4.3c7.8 0 6.2 4.9 6.2 4.9s-11.5 1.3-13.3 1.5C412.1 87.1 411 98.6 411 98.6s-2.7 13.4 10.7 13.4c9.2 0 14.5-7.5 14.5-7.5L435 111h16.2l4.3-24.8s5.5-18.8-15.2-18.9zm-2.5 26.8c-1.8 6.5-6.9 6.4-6.9 6.4s-4.8.6-4-3.9c.1-.4.7-3.5 5.3-4.2 2.9-.3 6.2-.9 6.2-.9s-.4 1.5-.6 2.6zM526.3 67.3c-10.5 0-15.7 7.5-15.7 7.5s-2-7.5-11.7-7.5-15.5 7.7-15.5 7.7l1.1-6.6h-17.8l-7.4 42.5h17.8l4.3-24.6s1.5-6 6.2-6 3.6 6.1 3.6 6.1L487 111h17.9l4.3-24.5s1.2-6.2 6.2-6.2 3.6 6.3 3.6 6.3l-4.3 24.3h18l4.9-28.5c-.1.1 2.6-15.1-11.3-15.1zM610.9 52.6c-7.1-.7-9.3 2.9-10.5 4.6-1.6 3.5-3.5 6.6-3.5 6.6s-5.3 6.1-11.7 6.3c-7.6 0-7.9-2.8-15.7-2.7-16.6 0-26.2 11.7-28.1 22.5-3.9 22.3 17.1 22.4 19 22.4 11.6 0 17-2.8 17-2.8l1.8-11s-5.3 2.4-12.9 2.4-8.5-6-8.5-6h27.4s1.1-7.3 1.2-8.1c.8-3.8.4-6 .6-7.2.2-1.1 2.3-10.7 19.9-12.9 10.1-1.8 9.9-7.4 9.9-7.8s0-5.1-5.9-6.3zm-40.7 32.9h-10.8s1.3-7.3 6.8-7.3 4 7.3 4 7.3z"/><circle cx="623.4" cy="50.6" r="3.7" fill="#FFD200"/></symbol>
+      <symbol id="welovedevs" xmlns="http://www.w3.org/2000/svg" xml:space="preserve" id="Calque_1" x="0" y="0" style="enable-background:new 0 0 288 100" viewBox="0 0 288 100"><g id="Page-1_5_"><g id="Group-54-Copy_5_" transform="translate(10 10)"><g id="Group-52_5_"><path id="Stroke-1_5_" d="M223.65 83.87h-35.33c-5.25 0-9.51-4.26-9.51-9.51s4.26-9.51 9.51-9.51h35.33c15.91 0 27.02-10.24 27.02-24.91 0-14.9-11.11-25.3-27.02-25.3H204.4c-5.25 0-9.51-4.26-9.51-9.51s4.26-9.51 9.51-9.51h19.24c26.24 0 46.03 19.05 46.03 44.32.01 25.05-19.78 43.93-46.02 43.93z" class="st0"/><path id="Stroke-3_5_" d="M37.75 84.37h-.17a9.505 9.505 0 0 1-8.85-6.49L6.7 11.97C5.04 6.99 7.72 1.6 12.7-.06c4.98-1.67 10.37 1.02 12.03 6l13.51 40.43 15-40.08a9.517 9.517 0 0 1 8.9-6.18c3.97 0 7.51 2.46 8.9 6.18l15.2 40.64 9.78-27.96C99.9 7.69 108.05-.43 118.4-3.25a31.574 31.574 0 0 1 21.9 1.97c1.06.51 2.09 1.07 3.08 1.68 4.98-3.07 10.76-4.75 16.63-4.75 8.44 0 16.7 3.48 22.65 9.55 6 6.11 9.31 14.24 9.31 22.88-.01 8.64-3.33 16.76-9.35 22.87l-27.73 28.33c-3.09 3.14-7.19 4.86-11.55 4.86s-8.46-1.72-11.53-4.84l-6.79-6.95-11.35-11.6c-3.67-3.75-3.61-9.77.14-13.44s9.77-3.61 13.44.14l16.1 16.44 25.7-26.27c2.48-2.52 3.9-6 3.9-9.57 0-3.56-1.41-7.04-3.86-9.54-2.44-2.49-5.67-3.86-9.09-3.86s-6.64 1.37-9.08 3.85l-.78.79a9.486 9.486 0 0 1-13.58 0l-.78-.8c-1.08-1.1-2.31-1.99-3.68-2.64-2.72-1.3-5.81-1.58-8.7-.79-5.91 1.61-8.53 7.6-9.39 10.1L95.53 78a9.516 9.516 0 0 1-8.87 6.37h-.1c-3.96 0-7.51-2.46-8.9-6.18l-15.5-41.43-15.5 41.43a9.526 9.526 0 0 1-8.91 6.18z" class="st0"/></g></g></g></symbol>
+      <symbol id="twitter" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 455 455" style="enable-background:new 0 0 455 455" xml:space="preserve"><path style="fill-rule:evenodd;clip-rule:evenodd" d="M0 0v455h455V0H0zm352.751 163.259c.123 2.773.186 5.561.186 8.36 0 85.403-65.002 183.876-183.873 183.876-36.496 0-70.466-10.697-99.065-29.037 5.056.601 10.199.907 15.417.907 30.278 0 58.143-10.331 80.262-27.668-28.28-.519-52.148-19.204-60.373-44.88a64.403 64.403 0 0 0 12.161 1.163c5.894 0 11.604-.794 17.027-2.268-29.563-5.939-51.841-32.057-51.841-63.368 0-.273 0-.544.006-.814a64.366 64.366 0 0 0 29.271 8.084c-17.342-11.589-28.748-31.371-28.748-53.79 0-11.845 3.187-22.945 8.751-32.492 31.873 39.101 79.493 64.828 133.203 67.526a64.831 64.831 0 0 1-1.677-14.729c0-35.688 28.938-64.623 64.626-64.623 18.589 0 35.385 7.847 47.173 20.406a129.352 129.352 0 0 0 41.038-15.681c-4.824 15.092-15.071 27.754-28.415 35.754 13.074-1.563 25.528-5.038 37.118-10.178-8.662 12.959-19.618 24.342-32.247 33.452z"/></symbol>
+      <symbol
+      id="linkedIn"
+        xmlns="http://www.w3.org/2000/svg"
+        viewBox="0 0 455 455"
+        style="enable-background: new 0 0 455 455"
+        xml:space="preserve"
+      >
+        <path
+          style="fill-rule: evenodd; clip-rule: evenodd"
+          d="M246.4 204.35v-.665c-.136.223-.324.446-.442.665h.442z"
+        />
+        <path
+          style="fill-rule: evenodd; clip-rule: evenodd"
+          d="M0 0v455h455V0H0zm141.522 378.002H74.016V174.906h67.506v203.096zm-33.753-230.816h-.446C84.678 147.186 70 131.585 70 112.085c0-19.928 15.107-35.087 38.211-35.087 23.109 0 37.31 15.159 37.752 35.087 0 19.5-14.643 35.101-38.194 35.101zM385 378.002h-67.524V269.345c0-27.291-9.756-45.92-34.195-45.92-18.664 0-29.755 12.543-34.641 24.693-1.776 4.34-2.24 10.373-2.24 16.459v113.426h-67.537s.905-184.043 0-203.096H246.4v28.779c8.973-13.807 24.986-33.547 60.856-33.547 44.437 0 77.744 29.02 77.744 91.398v116.465z"
+        />
+      </symbol>
+      <symbol
+        id="github"
+        viewBox="0 0 32 32"
+        xmlns="http://www.w3.org/2000/svg"
+      >
+        <path
+          d="M16 0.396c-8.839 0-16 7.167-16 16 0 7.073 4.584 13.068 10.937 15.183 0.803 0.151 1.093-0.344 1.093-0.772 0-0.38-0.009-1.385-0.015-2.719-4.453 0.964-5.391-2.151-5.391-2.151-0.729-1.844-1.781-2.339-1.781-2.339-1.448-0.989 0.115-0.968 0.115-0.968 1.604 0.109 2.448 1.645 2.448 1.645 1.427 2.448 3.744 1.74 4.661 1.328 0.14-1.031 0.557-1.74 1.011-2.135-3.552-0.401-7.287-1.776-7.287-7.907 0-1.751 0.62-3.177 1.645-4.297-0.177-0.401-0.719-2.031 0.141-4.235 0 0 1.339-0.427 4.4 1.641 1.281-0.355 2.641-0.532 4-0.541 1.36 0.009 2.719 0.187 4 0.541 3.043-2.068 4.381-1.641 4.381-1.641 0.859 2.204 0.317 3.833 0.161 4.235 1.015 1.12 1.635 2.547 1.635 4.297 0 6.145-3.74 7.5-7.296 7.891 0.556 0.479 1.077 1.464 1.077 2.959 0 2.14-0.020 3.864-0.020 4.385 0 0.416 0.28 0.916 1.104 0.755 6.4-2.093 10.979-8.093 10.979-15.156 0-8.833-7.161-16-16-16z"
+        />
+      </symbol>
+      <symbol
+        id="codepen-round"
+        viewBox="0 0 24 24"
+        role="img"
+        xmlns="http://www.w3.org/2000/svg"
+      >
+        <path
+          d="M18.144 13.067v-2.134L16.55 12zm1.276 1.194a.628.628 0 01-.006.083l-.005.028-.011.053-.01.031c-.005.016-.01.031-.017.047l-.014.03a.78.78 0 01-.021.043l-.019.03a.57.57 0 01-.08.1l-.026.025a.602.602 0 01-.036.03l-.029.022-.01.008-6.782 4.522a.637.637 0 01-.708 0L4.864 14.79l-.01-.008a.599.599 0 01-.065-.052l-.026-.025-.032-.034-.021-.028a.588.588 0 01-.067-.11l-.014-.031a.644.644 0 01-.017-.047l-.01-.03c-.004-.018-.008-.036-.01-.054l-.006-.028a.628.628 0 01-.006-.083V9.739c0-.028.002-.055.006-.083l.005-.027.011-.054.01-.03a.574.574 0 01.12-.217l.031-.034.026-.025a.62.62 0 01.065-.052l.01-.008 6.782-4.521a.638.638 0 01.708 0l6.782 4.521.01.008.03.022.035.03c.01.008.017.016.026.025a.545.545 0 01.08.1l.019.03a.633.633 0 01.021.043l.014.03c.007.016.012.032.017.047l.01.031c.004.018.008.036.01.054l.006.027a.619.619 0 01.006.083zM12 0C5.373 0 0 5.372 0 12 0 18.627 5.373 24 12 24c6.628 0 12-5.372 12-12 0-6.627-5.372-12-12-12m0 10.492L9.745 12 12 13.51 14.255 12zm.638 4.124v2.975l4.996-3.33-2.232-1.493zm-6.272-.356l4.996 3.33v-2.974l-2.764-1.849zm11.268-4.52l-4.996-3.33v2.974l2.764 1.85zm-6.272-.356V6.41L6.366 9.74l2.232 1.493zm-5.506 1.549v2.134L7.45 12Z"
+        />
+      </symbol>
       <symbol
         id="codepen"
         role="img"
