--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
     
     
     <title>Portfolio de Clément BELLIER</title>
-    <script type="module" crossorigin src="/assets/index.bca8347d.js"></script>
-    <link rel="stylesheet" href="/assets/index.24121f7e.css">
+    <script type="module" crossorigin defer src="./assets/index.bca8347d.js"></script>
+    <link rel="stylesheet" href="./assets/index.24121f7e.css">
   </head>
   <body>
     <div id="root"></div>
