Correction nom photo (é qui posait problème)

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     
     
-    <title>Portfolio de Clément BELLIER</title>
+    <title>Clément BELLIER - Développeur Web Fullstack Javascript</title>
     <script type="module" crossorigin defer src="./assets/index.bca8347d.js"></script>
     <link rel="stylesheet" href="./assets/index.24121f7e.css">
   </head>
