--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     
     
-    <title>Clément BELLIER - Développeur Web Fullstack Javascript</title>
-    <script type="module" crossorigin defer src="./assets/index.bca8347d.js"></script>
+    <title>Portfolio de Clément BELLIER</title>
+    <script type="module" crossorigin defer src="./assets/index.9588d8e3.js"></script>
     <link rel="stylesheet" href="./assets/index.24121f7e.css">
   </head>
   <body>
