--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="style.css" />
     <link rel="stylesheet" href="stars.css" />
-    <title>Portfolio de Clément BELLIER</title>
+    <title>Clément BELLIER - Développeur Fullstack Javascript</title>
   </head>
   <body>
     <div id="root"></div>
