--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     
     
-    <title>Portfolio de Clément BELLIER</title>
+    <title>Clément BELLIER - Développeur Fullstack Javascript</title>
     <script type="module" crossorigin defer src="./assets/index.9588d8e3.js"></script>
-    <link rel="stylesheet" href="./assets/index.d482ca4a.css">
+    <link rel="stylesheet" href="./assets/index.38bcb017.css">
   </head>
   <body>
     <div id="root"></div>
