ajout kata Potter

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     
     
     <title>Clément BELLIER - Développeur Fullstack Javascript</title>
-    <script type="module" crossorigin src="./assets/index.dc38e70c.js"></script>
+    <script type="module" crossorigin defer src="./assets/index.717c95c7.js"></script>
     <link rel="stylesheet" href="./assets/index.22aa0a5a.css">
   </head>
   <body>
