--- a/vitibot/index.html
+++ b/vitibot/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/assets/lego.svg" />
+    <link rel="icon" type="image/svg+xml" href="./assets/lego.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Lego Vitibot</title>
     <script type="module" crossorigin src="./assets/index.4972d71d.js"></script>
