Vitibot - Corrections texte

--- a/vitibot/index.html
+++ b/vitibot/index.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="fr">
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="./assets/lego.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Lego Vitibot</title>
-    <script type="module" crossorigin src="./assets/index.4972d71d.js"></script>
+    <script type="module" crossorigin src="./assets/index.08dfd69d.js"></script>
     <link rel="stylesheet" href="./assets/index.3be6051f.css">
   </head>
   <body>
