--- a/index.html
+++ b/index.html
@@ -682,6 +682,93 @@
             fill="#03AFEF"
           />
         </symbol>
+        <symbol aria-label="Next.js logomark" id="nextjs" viewBox="0 0 180 180">
+          <mask
+            height="180"
+            id="mask0_408_134"
+            maskUnits="userSpaceOnUse"
+            style="mask-type: alpha"
+            width="180"
+            x="0"
+            y="0"
+          >
+            <circle cx="90" cy="90" fill="black" r="90"></circle>
+          </mask>
+          <g mask="url(#mask0_408_134)">
+            <circle
+              cx="90"
+              cy="90"
+              data-circle="true"
+              fill="black"
+              r="90"
+            ></circle>
+            <path
+              d="M149.508 157.52L69.142 54H54V125.97H66.1136V69.3836L139.999 164.845C143.333 162.614 146.509 160.165 149.508 157.52Z"
+              fill="url(#paint0_linear_408_134)"
+            ></path>
+            <rect
+              fill="url(#paint1_linear_408_134)"
+              height="72"
+              width="12"
+              x="115"
+              y="54"
+            ></rect>
+          </g>
+          <defs>
+            <linearGradient
+              gradientUnits="userSpaceOnUse"
+              id="paint0_linear_408_134"
+              x1="109"
+              x2="144.5"
+              y1="116.5"
+              y2="160.5"
+            >
+              <stop stop-color="white"></stop>
+              <stop offset="1" stop-color="white" stop-opacity="0"></stop>
+            </linearGradient>
+            <linearGradient
+              gradientUnits="userSpaceOnUse"
+              id="paint1_linear_408_134"
+              x1="121"
+              x2="120.799"
+              y1="54"
+              y2="106.875"
+            >
+              <stop stop-color="white"></stop>
+              <stop offset="1" stop-color="white" stop-opacity="0"></stop>
+            </linearGradient>
+          </defs>
+        </symbol>
+        <symbol
+          id="strapi"
+          viewBox="0 0 600 600"
+          fill="none"
+          xmlns="http://www.w3.org/2000/svg"
+        >
+          <path
+            d="M0 208C0 109.948 0 60.9218 30.4609 30.4609C60.9218 0 109.948 0 208 0H392C490.052 0 539.078 0 569.539 30.4609C600 60.9218 600 109.948 600 208V392C600 490.052 600 539.078 569.539 569.539C539.078 600 490.052 600 392 600H208C109.948 600 60.9218 600 30.4609 569.539C0 539.078 0 490.052 0 392V208Z"
+            fill="#4945FF"
+          />
+          <path
+            fill-rule="evenodd"
+            clip-rule="evenodd"
+            d="M414 182H212V285H315V388H418V186C418 183.791 416.209 182 414 182Z"
+            fill="white"
+          />
+          <rect x="311" y="285" width="4" height="4" fill="white" />
+          <path
+            d="M212 285H311C313.209 285 315 286.791 315 289V388H216C213.791 388 212 386.209 212 384V285Z"
+            fill="#9593FF"
+          />
+          <path
+            d="M315 388H418L318.414 487.586C317.154 488.846 315 487.953 315 486.172V388Z"
+            fill="#9593FF"
+          />
+          <path
+            d="M212 285H113.828C112.046 285 111.154 282.846 112.414 281.586L212 182V285Z"
+            fill="#9593FF"
+          />
+        </symbol>
 
         <symbol
           id="mariadb"
